--- a/app/src/style.css
+++ b/app/src/style.css
@@ -39,6 +39,15 @@ iframe {
 .font-size-20 {
   font-size: 20px;
 }
+.font-size-20-12 {
+  font-size: 20px;
+}
 .font-size-24 {
   font-size: 24px;
+}
+
+@media only screen and (max-width: 800px) { 
+  .font-size-20-12 {
+    font-size: 12px;
+  }
 }
